--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,91 @@ a {
 * {
   box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.container {
+  width: 100rem;
+  margin: 0 auto;
+}
+
+.box-shadow {
+  box-shadow: 6px -6px 3px rgba(0, 0, 0, 0.2);
+}
+
+.gradient {
+  background-image: linear-gradient(90deg, #fbec5a, #f6c2ef);
+}
+
+.btn {
+  border: none;
+  border-radius: 9px;
+}
+
+.outline-norm {
+  border: 1px solid #000;
+}
+
+.outline-urgent {
+  border: 1px solid #ff0000ff;
+}
+
+.outline-can-wait {
+  border: 1px solid #fff200;
+}
+
+@media (max-width: 1600px) {
+  .container {
+    width: 87.5rem;
+  }
+}
+
+@media (max-width: 1401px) {
+  .container {
+    width: 75rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 62.5rem;
+  }
+}
+
+@media (max-width: 1001px) {
+  .container {
+    width: 50rem;
+  }
+}
+
+@media (max-width: 801px) {
+  .container {
+    width: 37.5rem;
+  }
+}
+
+@media (max-width: 601px) {
+  .container {
+    width: 25rem;
+  }
+}
+
+@media (max-width: 481px) {
+  .container {
+    width: 16.5rem;
+  }
+}
+
